# subtitle-alchemy

./: .gitignore  Makefile  README.md  conda-gpu-subalch-py310.yaml  conda-osx-subalch-py310.yaml  pyproject.toml  ruff.toml
src/subalch/: align_script.py  serde.py  stt.py
src/subalch/align/: __init__.py  _index.py  _tl.py  align_ind.py
src/subalch/cli/: __main__.py  generate.py  transcribe.py
src/subalch/subtitle/: __init__.py  srt.py  stt.py
src/subalch/utils/: compare_word.py
tests/: test_align_script.py  test_subtitle_merge.py  test_utils_compare_word.py  test_utils_pinyin.py
