[project]
name = "subtitle-alchemy"
version = "0.1.0"
description = "Process subtitle files with ease."
authors = [
    {name = "ZHANG Meng", email = "stall-breezes.0t@icloud.com"},
]
dependencies = [
    "click>=8.1.3",
]
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
homepage = "https://github.com/ppmzhang2/subtitle-alchemy"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}.post{ccount}+{sha}"
dirty_template = "{tag}.post{ccount}+{sha}.dirty"

[tool.mypy]
files = [
  "src",
  "tools",
]
python_version = "3.10"
ignore_missing_imports = true

[tool.yapf]
force_single_line = true
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true

[project.scripts]
subalch = "subalch.cli.__main__:cli"
